# playground

./: .gitignore  pyproject.toml
.github/workflows/: ai-review.yml  ci.yml  debug-ai-review.yml
c/: Makefile
c/include/: p002_utils.h
c/src/: main.c  p002_utils.c
c/tests/: minunit.h  test_p002_utils.c
docs/: 00_index.md  01_基礎.md
go/: go.mod
go/src/playground/: g004_type.go  g010_struct.go
go/tests/: g004_tyoe_test.go  g010_struct_test.go
py/: pyproject.toml
py/scripts/: ai_review.py
py/src/playground/: p001_cli.py  p002_utils.py  p003_io.py  p004_type.py
py/tests/: conftest.py  test_002_utils.py  test_003_io.py  test_004_type.py
